docs: update documentation for v1.3.0 release
- Complete API reference rewrite: added 20+ missing methods, removed duplicates
- Added Spec, FunctionWhitelist, QueryMetricsCollector full API docs
- Added EntityModifiedEvent, SampledEvictionCache, MaskSerializer docs
- Added expression SET (setAdd/setSubtract), withVersionIncrement
- Added ProjectionSpec aggregate functions, streaming, deep pagination
- Added UPSERT batch with separate transactions, failure strategy
- Added MyJpaTemplate UPSERT operations, Slice pagination, batch by IDs
- Added encryption key rotation workflow, PBKDF2 tuning, key validation
- Expanded @RetryOnOptimisticLock with attributes and usage guide
- Added BatchPartialCommitException, evictEntityCache docs
- Synced all Chinese (zh) documentation with English updates
- Translated Chinese text in changelog to English
- Marked v1.3.0 as released (2026-07-04)